// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency renders default dutch currency correctly 1`] = `
<span
  className="price"
>
  € 43,39
</span>
`;

exports[`Currency renders round dutch currency correctly 1`] = `
<span
  className="price"
>
  € 43,00
</span>
`;
